--- a/style.css
+++ b/style.css
@@ -121,10 +121,12 @@ span{
     background: var(--main-color);
     color: var(--text-color);
     border: 1px solid var(--main-color);
-    transition: all .40 ease;
+    /* transition: all .40 ease; */
+    transition: all 0.3s;
+
 }
 .btn:hover{
-    transform: scale(1.01) translate(-5px);
+    /* transform: scale(1.01) translate(-5px); */
     background: transparent;
     border: 1px solid var(--main-color);
 }
@@ -197,11 +199,15 @@ span{
 .service:hover {
   background-color: var(--main-color);
 }
+.service:hover i{
+  color: white;
+}
 
 .service i {
   font-size: 36px;
   color: var(--main-color);
   margin-bottom: 10px;
+  transition: all 0.3s;
 }
 
 .service-content {
